# Ctris

./: .gitattributes  CMakeLists.txt  README.md  a.out  main  main.c
metodos/bolsa_piezas/: bolsa_piezas.c  bolsa_piezas.h
metodos/completar_linea/: completar_linea.c  completar_linea.h
metodos/hold/: holdear.c  holdear.h
metodos/mover/bajar/: bajar_2x2.c  bajar_2x2.h  bajar_3x2.c  bajar_3x2.h  bajar_4x1.c  bajar_4x1.h
metodos/mover/lados/: lados_3x2.c  lados_3x2.h  lados_4x1.c  lados_4x1.h
metodos/mover/rotar/: rotar_especial.c  rotar_especial.h  rotar_normal.c  rotar_normal.h
metodos/perder/: comprobar_perder.c  comprobar_perder.h
metodos/piezas/limpiar/: limpiar.c  limpiar.h
metodos/piezas/pintar/: pintar.c  pintar.h
metodos/teclado/: teclado.c  teclado.h
piezas/: Pieza.c  Pieza.h  Pieza_I.c  Pieza_I.h  Pieza_J.c  Pieza_J.h  Pieza_L.c  Pieza_L.h  Pieza_O.c  Pieza_O.h  Pieza_S.c  Pieza_S.h  Pieza_T.c  Pieza_T.h  Pieza_Z.c  Pieza_Z.h
tablero/: crear_tablero.c  crear_tablero.h  tablero.h
utils/: constantes.h
